1.06-internet_gateway.tf
resource "aws_internet_gateway" "eks_igw" { # Crea un Internet Gateway
  vpc_id = aws_vpc.eks_vpc.id               # Asocia el Internet Gateway con la VPC

  tags = {
    Name = "eks-internet-gateway"
  }

  depends_on = [aws_vpc.eks_vpc]
}
